--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -433,7 +433,7 @@
       "source": [
         "# 1. Inference\n",
         "\n",
-        "`detect.py` runs YOLOv5 inference on a variety of sources, downloading models automatically from the [latest YOLOv5 release](https://github.com/ultralytics/yolov5/releases), and saving results to `runs/detect`. Example inference sources are:\n",
+        "`detect.py` runs YOLOv5 inference on a variety of sources, downloading models. automatically from the [latest YOLOv5 release](https://github.com/ultralytics/yolov5/releases), and saving results to `runs/detect`. Example inference sources are:\n",
         "\n",
         "```shell\n",
         "python detect.py --source 0  # webcam\n",
@@ -668,7 +668,7 @@
         "\n",
         "Train a YOLOv5s model on the [COCO128](https://www.kaggle.com/ultralytics/coco128) dataset with `--data coco128.yaml`, starting from pretrained `--weights yolov5s.pt`, or from randomly initialized `--weights '' --cfg yolov5s.yaml`.\n",
         "\n",
-        "- **Pretrained [Models](https://github.com/ultralytics/yolov5/tree/master/models)** are downloaded\n",
+        "- **Pretrained [Models](https://github.com/ultralytics/yolov5/tree/master/models.)** are downloaded\n",
         "automatically from the [latest YOLOv5 release](https://github.com/ultralytics/yolov5/releases)\n",
         "- **[Datasets](https://github.com/ultralytics/yolov5/tree/master/data)** available for autodownload include: [COCO](https://github.com/ultralytics/yolov5/blob/master/data/coco.yaml), [COCO128](https://github.com/ultralytics/yolov5/blob/master/data/coco128.yaml), [VOC](https://github.com/ultralytics/yolov5/blob/master/data/VOC.yaml), [Argoverse](https://github.com/ultralytics/yolov5/blob/master/data/Argoverse.yaml), [VisDrone](https://github.com/ultralytics/yolov5/blob/master/data/VisDrone.yaml), [GlobalWheat](https://github.com/ultralytics/yolov5/blob/master/data/GlobalWheat2020.yaml), [xView](https://github.com/ultralytics/yolov5/blob/master/data/xView.yaml), [Objects365](https://github.com/ultralytics/yolov5/blob/master/data/Objects365.yaml), [SKU-110K](https://github.com/ultralytics/yolov5/blob/master/data/SKU-110K.yaml).\n",
         "- **Training Results** are saved to `runs/train/` with incrementing run directories, i.e. `runs/train/exp2`, `runs/train/exp3` etc.\n",
@@ -740,31 +740,31 @@
             "\u001b[34m\u001b[1mTensorBoard: \u001b[0mStart with 'tensorboard --logdir runs/train', view at http://localhost:6006/\n",
             "\n",
             "                 from  n    params  module                                  arguments                     \n",
-            "  0                -1  1      3520  models.common.Conv                      [3, 32, 6, 2, 2]              \n",
-            "  1                -1  1     18560  models.common.Conv                      [32, 64, 3, 2]                \n",
-            "  2                -1  1     18816  models.common.C3                        [64, 64, 1]                   \n",
-            "  3                -1  1     73984  models.common.Conv                      [64, 128, 3, 2]               \n",
-            "  4                -1  2    115712  models.common.C3                        [128, 128, 2]                 \n",
-            "  5                -1  1    295424  models.common.Conv                      [128, 256, 3, 2]              \n",
-            "  6                -1  3    625152  models.common.C3                        [256, 256, 3]                 \n",
-            "  7                -1  1   1180672  models.common.Conv                      [256, 512, 3, 2]              \n",
-            "  8                -1  1   1182720  models.common.C3                        [512, 512, 1]                 \n",
-            "  9                -1  1    656896  models.common.SPPF                      [512, 512, 5]                 \n",
-            " 10                -1  1    131584  models.common.Conv                      [512, 256, 1, 1]              \n",
+            "  0                -1  1      3520  models..common.Conv                      [3, 32, 6, 2, 2]              \n",
+            "  1                -1  1     18560  models..common.Conv                      [32, 64, 3, 2]                \n",
+            "  2                -1  1     18816  models..common.C3                        [64, 64, 1]                   \n",
+            "  3                -1  1     73984  models..common.Conv                      [64, 128, 3, 2]               \n",
+            "  4                -1  2    115712  models..common.C3                        [128, 128, 2]                 \n",
+            "  5                -1  1    295424  models..common.Conv                      [128, 256, 3, 2]              \n",
+            "  6                -1  3    625152  models..common.C3                        [256, 256, 3]                 \n",
+            "  7                -1  1   1180672  models..common.Conv                      [256, 512, 3, 2]              \n",
+            "  8                -1  1   1182720  models..common.C3                        [512, 512, 1]                 \n",
+            "  9                -1  1    656896  models..common.SPPF                      [512, 512, 5]                 \n",
+            " 10                -1  1    131584  models..common.Conv                      [512, 256, 1, 1]              \n",
             " 11                -1  1         0  torch.nn.modules.upsampling.Upsample    [None, 2, 'nearest']          \n",
-            " 12           [-1, 6]  1         0  models.common.Concat                    [1]                           \n",
-            " 13                -1  1    361984  models.common.C3                        [512, 256, 1, False]          \n",
-            " 14                -1  1     33024  models.common.Conv                      [256, 128, 1, 1]              \n",
+            " 12           [-1, 6]  1         0  models..common.Concat                    [1]                           \n",
+            " 13                -1  1    361984  models..common.C3                        [512, 256, 1, False]          \n",
+            " 14                -1  1     33024  models..common.Conv                      [256, 128, 1, 1]              \n",
             " 15                -1  1         0  torch.nn.modules.upsampling.Upsample    [None, 2, 'nearest']          \n",
-            " 16           [-1, 4]  1         0  models.common.Concat                    [1]                           \n",
-            " 17                -1  1     90880  models.common.C3                        [256, 128, 1, False]          \n",
-            " 18                -1  1    147712  models.common.Conv                      [128, 128, 3, 2]              \n",
-            " 19          [-1, 14]  1         0  models.common.Concat                    [1]                           \n",
-            " 20                -1  1    296448  models.common.C3                        [256, 256, 1, False]          \n",
-            " 21                -1  1    590336  models.common.Conv                      [256, 256, 3, 2]              \n",
-            " 22          [-1, 10]  1         0  models.common.Concat                    [1]                           \n",
-            " 23                -1  1   1182720  models.common.C3                        [512, 512, 1, False]          \n",
-            " 24      [17, 20, 23]  1    229245  models.yolo.Detect                      [80, [[10, 13, 16, 30, 33, 23], [30, 61, 62, 45, 59, 119], [116, 90, 156, 198, 373, 326]], [128, 256, 512]]\n",
+            " 16           [-1, 4]  1         0  models..common.Concat                    [1]                           \n",
+            " 17                -1  1     90880  models..common.C3                        [256, 128, 1, False]          \n",
+            " 18                -1  1    147712  models..common.Conv                      [128, 128, 3, 2]              \n",
+            " 19          [-1, 14]  1         0  models..common.Concat                    [1]                           \n",
+            " 20                -1  1    296448  models..common.C3                        [256, 256, 1, False]          \n",
+            " 21                -1  1    590336  models..common.Conv                      [256, 256, 3, 2]              \n",
+            " 22          [-1, 10]  1         0  models..common.Concat                    [1]                           \n",
+            " 23                -1  1   1182720  models..common.C3                        [512, 512, 1, False]          \n",
+            " 24      [17, 20, 23]  1    229245  models..yolo.Detect                      [80, [[10, 13, 16, 30, 33, 23], [30, 61, 62, 45, 59, 119], [116, 90, 156, 198, 373, 326]], [128, 256, 512]]\n",
             "Model Summary: 270 layers, 7235389 parameters, 7235389 gradients, 16.5 GFLOPs\n",
             "\n",
             "Transferred 349/349 items from yolov5s.pt\n",
@@ -1023,7 +1023,7 @@
         "%%shell\n",
         "export PYTHONPATH=\"$PWD\"  # to run *.py. files in subdirectories\n",
         "rm -rf runs  # remove runs/\n",
-        "for m in yolov5n; do  # models\n",
+        "for m in yolov5n; do  # models.\n",
         "  python train.py --img 64 --batch 32 --weights $m.pt --epochs 1 --device 0  # train pretrained\n",
         "  python train.py --img 64 --batch 32 --weights '' --cfg $m.yaml --epochs 1 --device 0  # train scratch\n",
         "  for d in 0 cpu; do  # devices\n",
@@ -1033,8 +1033,8 @@
         "    python detect.py --weights runs/train/exp/weights/best.pt --device $d  # detect custom\n",
         "  done\n",
         "  python hubconf.py  # hub\n",
-        "  python models/yolo.py --cfg $m.yaml  # build PyTorch model\n",
-        "  python models/tf.py --weights $m.pt  # build TensorFlow model\n",
+        "  python models./yolo.py --cfg $m.yaml  # build PyTorch model\n",
+        "  python models./tf.py --weights $m.pt  # build TensorFlow model\n",
         "  python export.py --img 64 --batch 1 --weights $m.pt --include torchscript onnx  # export\n",
         "done"
       ],
